--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "mobx-ui",
   "version": "0.0.0",
   "description": "Mobx ui framework ",
-  "main": "index.js",
+  "main": "dist/index.js",
+  "source": "./index.js",
   "scripts": {
-    "build": "webpack",
-    "start:dev": "webpack-dev-server",
+    "build": "microbundle",
+    "start:dev": "WEBPACK_ENV=development webpack-dev-server",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Georgy Glezer",
@@ -14,10 +15,11 @@
     "mobx": "*"
   },
   "devDependencies": {
-    "mobx": "^5.15.4",
     "@babel/cli": "^7.8.4",
     "@babel/core": "^7.9.0",
     "copy-webpack-plugin": "^5.1.1",
+    "microbundle": "^0.11.0",
+    "mobx": "^5.15.4",
     "webpack": "^4.42.1",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.10.3"
